# lib/api-spec/openapi.yaml
@@ -66,7 +66,9 @@ components:
           type: number
         keyword:
           type: string
-        gifUrl:
+        videoUrl:
+          type: string
+        imagePrompt:
           type: string
         githubUrl:
           type: string
@@ -81,7 +83,7 @@ components:
       required:
         - id
         - keyword
-        - gifUrl
+        - videoUrl
         - githubUrl
         - owner
         - repo
